--- a/Src/makefile
+++ b/Src/makefile
@@ -1,13 +1,13 @@
 # 标志
-CC = clang
+CC = gcc
 CFLAGS = -Wall -std=c99
 rm = rm -rf
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -c -o $@ $< -g
 
 SeedCup: regularExpression.o fileHandle.o SeedCup.o
-	$(CC) $(CFLAGS) $^ -o SeedCup
+	$(CC) $(CFLAGS) $^ -o SeedCup -g
 
 clean:
 	$(rm) *.o SeedCup.exe output*.txt
