delete modify debug

--- a/Src/makefile
+++ b/Src/makefile
@@ -2,12 +2,14 @@
 CC = gcc
 CFLAGS = -Wall -std=c99
 rm = rm -rf
+# windows 平台
+# rm = del /q
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c -o $@ $< -g
+	$(CC) $(CFLAGS) -c -o $@ $< 
 
 SeedCup: regularExpression.o fileHandle.o SeedCup.o
-	$(CC) $(CFLAGS) $^ -o SeedCup -g
+	$(CC) $(CFLAGS) $^ -o SeedCup 
 
 clean:
 	$(rm) *.o SeedCup.exe output*.txt
